2023-11-14T13:42:49.526Z |            1.9.1 | fix
2023-11-14T13:48:36.470Z |            1.9.2 | fix
2023-11-14T14:53:12.940Z |            1.9.3 | fix
2023-11-15T11:55:25.156Z |            1.9.4 | upd
2023-11-15T13:13:33.114Z |            1.9.5 | fix
2023-12-14T14:30:29.657Z |           1.10.0 | Date to local ISO
2024-02-18T11:51:24.158Z |           1.11.0 | Boilerplate
2024-02-18T13:03:58.200Z |           1.11.1 | fix
2024-02-20T15:53:28.808Z |           1.12.0 | UseResizeObserverHook
2024-02-20T15:58:21.610Z |           1.12.1 | fix
2024-02-20T16:02:24.572Z |           1.12.2 | fix
2024-02-28T15:33:21.211Z |           1.12.3 | fix
2024-03-14T18:11:58.214Z |           1.13.0 | React Hooks in index.js + relative dates func
2024-03-15T11:19:11.878Z |           1.13.1 | fix
2024-03-15T13:44:10.101Z |           1.13.2 | fix
2024-03-17T20:39:20.603Z |           1.13.3 | fix
2024-03-18T10:33:35.665Z |           1.13.4 | fix
2024-03-19T20:39:35.187Z |           1.13.5 | fix
2024-03-20T11:31:17.293Z |           1.13.6 | relative date upd
2024-05-29T13:55:19.370Z |           1.14.0 | unescapeHTML func + upd eslint
2024-05-29T14:01:22.988Z |           1.14.1 | fix
2024-08-06T16:03:29.707Z |           1.14.2 | fix
2024-12-15T12:31:51.917Z |           1.15.0 | datesFromTo
2024-12-17T09:11:33.674Z |           1.15.1 | fix
2024-12-18T16:17:49.677Z |           1.15.2 | fix
2025-03-30T13:50:38.351Z |           1.15.3 | libs upd
2025-04-30T13:13:08.365Z |           1.15.4 | fix
2025-06-03T15:21:22.928Z |           1.15.5 | fix
2025-07-18T13:45:22.198Z |           1.16.0 | array to csv
2025-07-18T13:51:02.677Z |           1.16.1 | fix
2025-07-28T10:57:23.083Z |           1.17.0 | classnames & domBuilder
2025-07-28T12:27:09.065Z |           1.18.0 | parseText
2025-07-28T12:36:33.104Z |           1.18.1 | fix
2025-07-30T13:39:42.317Z |           1.19.0 | domBuilder: support for dom elements as content values
2025-09-25T08:42:53.002Z |           1.19.1 | fix